feat: add update and delete product
