# src/serverBuilder.ts
@@ -12,8 +12,7 @@ import { Registry } from 'prom-client';
 import type { ConfigType } from '@common/config';
 import { SERVICES } from '@common/constants';
 import { PRODUCT_ROUTER_SYMBOL } from './products/routes/products';
-import { ANOTHER_RESOURCE_ROUTER_SYMBOL } from './anotherResource/routes/anotherResourceRouter';
-import { PRODUCT_SERVICE_SYMBOL } from './products/tokens';
+
 @injectable()
 export class ServerBuilder {
   private readonly serverInstance: express.Application;
@@ -21,8 +20,7 @@ export class ServerBuilder {
     @inject(SERVICES.CONFIG) private readonly config: ConfigType,
     @inject(SERVICES.LOGGER) private readonly logger: Logger,
     @inject(SERVICES.METRICS) private readonly metricsRegistry: Registry,
-    @inject(PRODUCT_ROUTER_SYMBOL) private readonly productsRouter: Router,
-    @inject(ANOTHER_RESOURCE_ROUTER_SYMBOL) private readonly anotherResourceRouter: Router
+    @inject(PRODUCT_ROUTER_SYMBOL) private readonly productsRouter: Router
   ) {
     this.serverInstance = express();
   }
@@ -46,7 +44,6 @@ export class ServerBuilder {
 
   private buildRoutes(): void {
     this.serverInstance.use('/products', this.productsRouter);
-    this.serverInstance.use('/anotherResource', this.anotherResourceRouter);
     this.buildDocsRoutes();
   }
 
